--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.faltenreich:skeletonlayout:4.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
