--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "1.1.1"
 
     // ViewModel and LiveData
@@ -50,5 +51,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.faltenreich:skeletonlayout:4.0.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
 }
